--- a/src/components/bodyHTML/ItemCatalog/ItemCatalog.module.css
+++ b/src/components/bodyHTML/ItemCatalog/ItemCatalog.module.css
@@ -17,7 +17,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 80%;
+    width: 70%;
     height: 200px;
     margin: 0 auto;
 }
@@ -27,4 +27,8 @@
     width: 350px;
     border-radius: 12px;
     margin: 40px 0;
+}
+
+.title{
+    margin-bottom: 15px;
 }
