--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -3,4 +3,58 @@
   text-align: center;
   flex-direction: column;
   gap: 1.25rem;
+  height: 100vh;
+  background: rgb(0,0,0);
+  background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(0,134,105,1) 100%); 
+  
+}
+
+.form__container{
+
+  border-radius: 16px;
+  background-color: #fff;
+  width: 300px;
+  height: 700px;
+  margin: 32.5vh auto;
+}
+
+.loginHeader{
+  margin-top: 15px;
+  margin-bottom: 25px;
+  font-size: 32px;
+}
+
+.formInput{
+  padding: 5px 15px;
+  border: 1px solid #000;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  transition: all 0.3s ease;
+  border: none;
+  background-color:darkgrey;
+}
+.formInput:focus{
+  background-color: cadetblue;
+  outline:  #008669;
+  border: #008669;
+}
+
+.button{
+  padding: 10px 25px;
+  border-radius: 8px;
+  background-color: #008669;
+  color: #fff;
+  margin: 20px 0;
+  transition: all 0.3s ease;
+}
+
+.button:hover{
+  background-color: #000;
+  opacity: 0.9;
+  color: #fff;
+}
+
+.inputTitle{
+  text-align: start;
+  margin-left: 37.5px;
 }
